<resources>
    <string name="app_name">HUAWEI Blog Plus</string>
    <string name="developer_email">dev@huaweiblog.de</string>
    <string name="pref_title_heart">Gemacht mit ❤ in Düsseldorf</string>
    <string name="pref_title_term">Terms &amp; Policies</string>
    <string name="pref_title_dev_email">Entwickler Kontakt</string>
    <string name="toast_quit">Zum Beenden nochmal wischen!</string>
    <string name="compose_shortcut_short_label1">Lieblingsgeräte</string>
    <string name="compose_shortcut_long_label1">Lieblingsgeräte</string>
    <string name="compose_disabled_message1">Shortcut deaktivieren</string>
    <string name="filter_view_http">HUAWEI Blog Plus</string>
    <string name="filter_view_hwblgnews">HUAWEI Blog Plus</string>
    <string name="twitter_api_consumer_key">gbsWrBY6VbvfJ77iZJVYxxKpe</string>
    <string name="twitter_api_consumer_secret_key">hWJO1x6IYqYmKzKExE4EJmvrILy05GUHMvZYUTyFMNjgyW9SOo</string>
    <string name="google_maps_key"></string>
    <string name="pinterest_access_token"></string>
    <string name="soundcloud_id"></string>
    <string name="flickr_key"></string>
    <string name="tumblr_key"></string>
    <string name="vimeo_access_token"></string>
    <string name="woocommerce_consumer_key"></string>
    <string name="woocommerce_consumer_secret"></string>
    <string name="woocommerce_url"></string>
    <string name="onesignal_app_id_hms">cba9e0e5-bfd2-4c25-99e4-9a8dde7d8986</string>
    <string name="onesignal_hms_project_number">436068194488</string>
    <string name="onesignal_app_id">2bada061-cd7d-45b4-9ab3-9194b4c08ed8</string>
    <string name="onesignal_google_project_number">436068194488</string>
    <string name="settings_theme_title">Design</string>
    <string name="settings_device_summary">Klicken zum Wählen</string>
    <string name="privacy_policy_url">http://www.huaweiblog.de/impressum/#datenschutz</string>
    <string name="about_text"><![CDATA[<b>Version 8.0.1</b> <br><br>Danke für den Download unserer App<br><br> <i>Copyright © 2020 Huawei.Blog. \nAll rights reserved</i>]]></string>
    <string name="google_play_license"></string>
    <string name="product_id"></string>
    <string name="admob_banner_id">ca-app-pub-1746953584716816/7925923761</string>
    <string name="admob_interstitial_id"></string>
    <string name="settings_device_dialog_title">Geräteauswahl</string>
    <string name="settings_device_title">Lieblingsgerät</string>
    <string name="privacy_policy_header">DSGVO</string>
    <string name="privacy_policy_summary"><![CDATA[Uns ist der Schutz der Daten unserer Nutzer wichtig. Wenn Du diese App nutzt, stimmst Du unseren Bestimmungen zum Datenschutz zu, also auch die Nutzung von Cookies durch Drittanbieter solange sie mit unserer <a href="%1$s">Datenschutzerklärung vereinbar sind</a>.]]></string>
    <string name="privacy_policy_agreement">Durch klicken von \'Ich stimme zu\', stimme ich den Datenschutzbestimmungen von HUAWEI.Blog zu und darf die App weiter nutzen.</string>
    <string name="privacy_policy_agree_button">Ich stimme zu</string>
    <string name="name">Name</string>
    <string name="username">Nutzername</string>
    <string name="profile_image">Profilbild</string>
    <string name="message">Nachricht</string>
    <string name="tweet_share_header">\'s tweet</string>
    <string name="ok">Ok</string>
    <string name="feed_title_value">Feed title</string>
    <string name="feed_link_value">Feed description</string>
    <string name="feed_description_value">Feed link</string>
    <string name="btn_video">Play video</string>
    <string name="btn_audio">Play audio</string>
    <string name="video_no_live_title">On a break</string>
    <string name="video_no_live">No live streams available now</string>
    <string name="video_live">Select a stream</string>
    <string name="play_button">Play</string>
    <string name="video_share_begin">"I just saw this video: "</string>
    <string name="video_share_middle">" in the \""</string>
    <string name="video_share_end">\" app</string>
    <string name="video_subtitle_start">"Uploaded "</string>
    <string name="video_subtitle_end">" by "</string>
    <string name="webview_title">Web</string>
    <string name="retry">Retry</string>
    <string name="notification_error_ssl_cert_invalid">The SSL Certificate of the server could not be verified. Would you like to continue?</string>
    <string name="web_share_begin">"Schau was ich gesehen habe \""</string>
    <string name="web_share_end">"\" app: "</string>
    <string name="item_del_text">Möchtest Du deine Favoriten wirklich komplett löschen?</string>
    <string name="item_del_confirmation">Ja, bitte löschen</string>
    <string name="no_favorites">Du kannst Favoriten definieren, wenn Du Artikel öffnest und als \"Favorit\" definierst</string>
    <string name="favorite_success">Der Artikel wurde hinzugefügt</string>
    <string name="favorite_duplicate">Der Artikel befindet sich schon in Deinen Favoriten</string>
    <string name="favorite_menu_delete">Delete</string>
    <string name="settings_general_summary">Benutzername und Passwort informationen</string>
    <string name="settings_general">Allgemein</string>
    <string name="settings_showmenu_summary">Ja/Nein</string>
    <string name="settings_showmenu">Seitenmenü beim Start anzeigen?</string>
    <string name="settings_fontsize_summary">In welcher Textgröße möchtest Du gerne deine Artikel lesen?</string>
    <string name="settings_fontsize">Textgröße</string>
    <string name="settings_fontsize_xl">Extra Large</string>
    <string name="settings_fontsize_l">Large</string>
    <string name="settings_fontsize_m">Default</string>
    <string name="settings_fontsize_s">Small</string>
    <string name="settings_fontsize_xs">Extra Small</string>
    <string name="settings_other_summary">Andere Informationen</string>
    <string name="settings_other">Andere</string>
    <string name="settings_aboutus_summary">Informationen über die App</string>
    <string name="settings_aboutus">Über die App</string>
    <string name="settings_notifications_summary">Benachrichtigungen bearbeiten</string>
    <string name="settings_notifications">Benachrichtigungen</string>
    <string name="settings_licenses_summary">Open-Source Software Lizenzen die genutzt werden</string>
    <string name="settings_licenses">Open-source Lizenzen</string>
    <string name="settings_rate_summary">Hilf uns und gib eine Bewertung ab</string>
    <string name="settings_rate">Bewerte diese App</string>
    <string name="settings_version">Version</string>
    <string name="settings_billing_summary">Bearbeite deine In-App Produkte</string>
    <string name="settings_billing">In-App Produkte</string>
    <string name="settings_systeminfo_summary">Klicke für weitere Push Informationen</string>
    <string name="settings_systeminfo">Push Informationen</string>
    <string name="settings_debug_summary">Alle Informationen für die Entwickler</string>
    <string name="settings_debug">Entwickler Übersicht</string>
    <string name="settings_purchase_summary">Entferne die komplette Werbung und schalte extra Content frei</string>
    <string name="settings_purchase">Schalte ein Extra Feature frei</string>
    <string name="settings_restore_purchase_success">Deine Käufe wurden wieder hergestellt.</string>
    <string name="settings_purchase_success">Kauf erfolgreich.</string>
    <string name="settings_purchase_fail">Kauf fehlgeschlagen.</string>
    <string name="settings_info_head">Informationen zur Nutzung</string>
    <string name="settings_info_content">Die Kommentarfunktion (Kommentare schreiben) in der App ist deaktiviert. Nutzt bitte die Kommentarfunktion am Blog.</string>
    <string name="dialog_purchase_title">Bereich ist gesperrt.</string>
    <string name="dialog_purchase">Wenn Du diesen Bereich einsehen möchtest, musst Du die komplette und werbefreie Version einmalig kaufen.\n\nDer Schritt entfernt wie gesagt auch sämtliche Werbung und hilft uns dieses Projekt fortzuführen.</string>
    <string name="wordpress_subtitle_start">"Autor: "</string>
    <string name="wordpress_subtitle_end">" - veröffentlicht "</string>
    <string name="related">Ähnliche Artikel</string>
    <string name="volume_low">Turn your volume up!</string>
    <string name="now_playing">Now playing</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="notification_playing">Playing audio - Live Stream</string>
    <string name="audio_notification">Background media playback</string>
    <string name="error_retry">Failed to connect to stream... </string>
    <string name="error_retry_later">Please try again in a few seconds... </string>
    <string name="radio_playing_other">Already playing another station. Press play again to play this station instead.</string>
    <string name="pin_default_message">Pin</string>
    <string name="image_descr">Image</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="tumblr_share_begin">Check out this post I saw in</string>
    <string name="saved">Saved at:</string>
    <string name="set_confirm">Are you sure you would like to set this image as wallpaper?</string>
    <string name="set_success">You have set a new Wallpaper!</string>
    <string name="duration">%1$d:%2$02d</string>
    <string name="toast_track_added">Added to the playlist. Touch again to play now.</string>
    <string name="playback_view_time">%1$02d:%2$02d</string>
    <string name="play_all">Play all</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="cart_success">Added to cart</string>
    <string name="order_success">Thank you for your order!</string>
    <string name="order_success_subtitle">We have received your order!</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="view_cart">View cart</string>
    <string name="cart_title">Shopping Cart</string>
    <string name="cart_failed">We were unable to checkout your items..</string>
    <string name="category">Category</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="latest_products">Latest Products</string>
    <string name="min_price">Minimum price</string>
    <string name="max_price">Maximum price</string>
    <string name="order_by">Sort by:</string>
    <string name="order_date">Newest</string>
    <string name="order_popularity">Most popular</string>
    <string name="order_price">Cheapest</string>
    <string name="order_rating">Best rated</string>
    <string name="tag">Tag</string>
    <string name="weight">Weight</string>
    <string name="sku">SKU</string>
    <string name="filter">Filter</string>
    <string name="tax_notice">Tax included</string>
    <string name="dimensions">Dimensions</string>
    <string name="reviews">%2d Rating(s)</string>
    <string name="no_reviews">No reviews yet</string>
    <string name="order_items">#%d (%d Items)</string>
    <string name="order_item">#%d (%s)</string>
    <string name="no_user">Who are you?</string>
    <string name="service">Enjoy Free Returns. Up to 2 Years of Warranty. Fast Customer Support. Safe Shopping and Checkout</string>
    <string name="no_user_subtitle">Login with your store account to view your orders.</string>
    <string name="no_order">You have no existing orders. Any orders you make while signed in will show up here.</string>
    <string name="shop">Shop</string>
    <string name="greeting">Hi %1s!</string>
    <string name="sale">Sale</string>
    <string name="featured">Featured</string>
    <string name="quantity">%2d pcs</string>
    <string name="quantity_picker">Select quantity</string>
    <string name="cart_empty_title">Your cart is empty</string>
    <string name="empty_textview">Fehler beim laden</string>
    <string name="settings_summary_terms">Unsere Terms und Conditions</string>
</resources>